Update2 index.html

--- a/index.html
+++ b/index.html
@@ -328,8 +328,9 @@
                     </svg>
                 </div>
                 <div class="card-content">
-                    <h3 class="card-title">?????????????????????</h3>
+                    <h3 class="card-title">Chat bot basico</h3>
                     <p class="card-number">Tema 10</p>
+                    <a href="chat_listas.html">Link de prueba</a>
                 </div>
             </div>
 
