--- a/index.html
+++ b/index.html
@@ -346,6 +346,22 @@
                     <a href="chat_sentimientos.html">Link de prueba</a>
                 </div>
             </div>
+
+            <div class="card new-card">
+                <div class="card-image">
+                    <svg viewBox="0 0 24 24" fill="none" stroke-width="1.5">
+                        <rect x="2" y="6" width="20" height="12" rx="2"/>
+                        <circle cx="8" cy="12" r="2"/>
+                        <path d="M18 12h.01M14 12h.01"/>
+                    </svg>
+                </div>
+                <div class="card-content">
+                    <h3 class="card-title">Componentes arduino</h3>
+                    <p class="card-number">Tema 12</p>
+                    <a href="componentes.html">Link de prueba</a>
+                </div>
+            </div>
+            
         </div>
     </section>
 
