--- a/index.html
+++ b/index.html
@@ -361,7 +361,76 @@
                     <a href="componentes.html">Link de prueba</a>
                 </div>
             </div>
-            
+
+            <!-- ========== NUEVO SUBTEMA - LIBRERÍAS DE PLN PARA CHATBOT ========== -->
+            <div class="card pln-libraries-card">
+                <div class="card-image">
+                    <svg viewBox="0 0 24 24" fill="none" stroke-width="1.5">
+                        <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+                        <path d="M8 10h8M8 14h4"/>
+                        <circle cx="12" cy="12" r="1" fill="#fff"/>
+                    </svg>
+                </div>
+                <div class="card-content pln-content">
+                    <h3 class="card-title">Librerías de PLN para Chatbot</h3>
+                    <p class="card-number">Tema 13</p>
+                    
+                    <div class="pln-categories">
+                        <div class="pln-category-item">
+                            <div class="pln-category-title">
+                                <span class="pln-category-icon">🗣️</span>
+                                Chatbot con PLN
+                            </div>
+                            <div class="pln-category-description">
+                                Procesamiento de lenguaje natural para análisis lingüístico y comprensión de texto
+                            </div>
+                            <div class="pln-category-libs">
+                                <strong>Librerías:</strong> NLTK, spaCy, TextBlob, Pattern
+                            </div>
+                        </div>
+
+                        <div class="pln-category-item">
+                            <div class="pln-category-title">
+                                <span class="pln-category-icon">🤖</span>
+                                Chatbot con IA
+                            </div>
+                            <div class="pln-category-description">
+                                Inteligencia artificial avanzada con aprendizaje profundo y modelos conversacionales
+                            </div>
+                            <div class="pln-category-libs">
+                                <strong>Librerías:</strong> Rasa, Dialogflow, ChatterBot, Hugging Face Transformers, OpenAI GPT
+                            </div>
+                        </div>
+
+                        <div class="pln-category-item">
+                            <div class="pln-category-title">
+                                <span class="pln-category-icon">📱</span>
+                                Chatbots conectados a plataformas
+                            </div>
+                            <div class="pln-category-description">
+                                Integración con WhatsApp, Telegram, Facebook Messenger y otras plataformas sociales
+                            </div>
+                            <div class="pln-category-libs">
+                                <strong>Librerías:</strong> Twilio, python-telegram-bot, fbchat, WhatsApp Business API, discord.py
+                            </div>
+                        </div>
+
+                        <div class="pln-category-item">
+                            <div class="pln-category-title">
+                                <span class="pln-category-icon">🌐</span>
+                                Chatbots en páginas web
+                            </div>
+                            <div class="pln-category-description">
+                                Frameworks y herramientas para integrar chatbots en sitios web con interfaces interactivas
+                            </div>
+                            <div class="pln-category-libs">
+                                <strong>Librerías:</strong> Botpress, Kommunicate, Flask/FastAPI + Socket.io, Rasa X, Streamlit
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- ========== FIN DEL NUEVO SUBTEMA ========== -->
         </div>
     </section>
 
