--- a/index.html
+++ b/index.html
@@ -162,6 +162,98 @@
             background: linear-gradient(135deg, #00ff00, #00ffff, #ff00ff);
         }
 
+/* ========== NUEVO CÓDIGO - ESTILOS PARA TARJETA DE LIBRERÍAS PLN ========== */
+        .card.pln-libraries-card {
+            border-image: linear-gradient(135deg, #ff6b00, #ffd700, #00ff88) 1;
+            grid-column: span 1;
+        }
+
+        .card.pln-libraries-card::before {
+            background: linear-gradient(135deg, #ff6b00, #ffd700, #00ff88);
+        }
+
+        .card.pln-libraries-card:hover {
+            box-shadow: 0 10px 40px rgba(255, 215, 0, 0.5);
+        }
+
+        .pln-content {
+            padding: 1.5rem;
+        }
+
+        .pln-categories {
+            margin-top: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            gap: 1.2rem;
+        }
+
+        .pln-category-item {
+            background: linear-gradient(135deg, #1a1a1a 0%, #0d0d0d 100%);
+            padding: 1.2rem;
+            border-radius: 8px;
+            border-left: 4px solid;
+            transition: all 0.3s ease;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .pln-category-item:nth-child(1) {
+            border-left-color: #00ff88;
+        }
+
+        .pln-category-item:nth-child(2) {
+            border-left-color: #00d4ff;
+        }
+
+        .pln-category-item:nth-child(3) {
+            border-left-color: #ff00ff;
+        }
+
+        .pln-category-item:nth-child(4) {
+            border-left-color: #ffd700;
+        }
+
+        .pln-category-item:hover {
+            background: linear-gradient(135deg, #252525 0%, #1a1a1a 100%);
+            transform: translateX(8px);
+            box-shadow: 0 4px 16px rgba(255, 215, 0, 0.2);
+        }
+
+        .pln-category-title {
+            font-weight: 600;
+            font-size: 1.05rem;
+            margin-bottom: 0.6rem;
+            color: #fff;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .pln-category-icon {
+            font-size: 1.3rem;
+        }
+
+        .pln-category-description {
+            font-size: 0.88rem;
+            color: #bbb;
+            line-height: 1.5;
+            margin-bottom: 0.6rem;
+        }
+
+        .pln-category-libs {
+            margin-top: 0.7rem;
+            font-size: 0.82rem;
+            color: #999;
+            font-style: italic;
+            padding-left: 1rem;
+            border-left: 2px solid #333;
+        }
+
+        .pln-category-libs strong {
+            color: #ccc;
+            font-style: normal;
+        }
+        /* ========== FIN DEL NUEVO CÓDIGO ========== */
+            
         @media (max-width: 768px) {
             .hero {
                 padding: 2rem;
